--- a/Main-Task/assets/css/Mybootstrap.css
+++ b/Main-Task/assets/css/Mybootstrap.css
@@ -3848,8 +3848,8 @@ textarea.form-control-lg {
 
 .navbar-collapse {
   flex-basis: 100%;
-  flex-grow: 1;
   align-items: center;
+  justify-content: end;
 }
 
 .navbar-toggler {
